--- a/src/backend/vulkan/Cargo.toml
+++ b/src/backend/vulkan/Cargo.toml
@@ -14,8 +14,8 @@ name = "gfx_device_vulkan"
 [dependencies]
 log = "0.3"
 vk = "0.0"
-vk-sys = { git = "https://github.com/sectopod/vulkano", branch = "bind" }
+vk-sys = "0.2"
 shared_library = "0.1"
 winit = "0.5"
 gfx_core = { path = "../../core", version = "0.6" }
-spirv-utils = { git = "https://github.com/msiglreith/spirv-utils.git", branch = "gfx" }
+spirv-utils = "0.2.1"
