--- a/src/hal/Cargo.toml
+++ b/src/hal/Cargo.toml
@@ -20,6 +20,7 @@ path = "src/lib.rs"
 
 [dependencies]
 bitflags = "1.0"
+derivative = "1"
 mint = { version = "0.5", optional = true }
 failure = "0.1"
 serde = { version = "1", features = ["serde_derive"], optional = true }
